CHANGELOG

When		Who		What
======================================================================================
2017-03-28 	Richard Forth   Small bug fix.
2017-03-25 	Richard Forth   Improved regex around the vhost count, specifically
				when looking for "port" it was capturing 
				aliases etc that has the word port as part of it, like
				support.mydomain.com, the regex should filter out what
				we dont want to see and only give us a true count of
				vhosts. Closes #160.
2017-03-25 	Richard Forth   Downgraded some warnings to advisory messages.
				Specifically where vhost count is greater than
				MaxClients / MaxRequestWorkers, also changed
				the wording slightly.
2017-03-25 	Richard Forth   Added a key to the usage() output, see --help
2017-03-25 	Richard Forth   Fixed some warnings and advisory messages not
				being hidden when using --nowarn or --report oprtions.
2017-03-25 	Richard Forth   Made the commands I think that are likely to
				fail due to different locale settings run in 
				en_GB.UTF-8 which doesnt affect system locale
				Also removed obsolete locale code that didnt
				do the job I wanted, also removed another 
				'privado' word I found, as this is now
				obsolete.
2017-03-25 	Richard Forth   Minor formatting issue in vhost breakdowns.
				Specifically removed extra space before
				variable in output.
2017-03-24 	Richard Forth   Fixed vhost breakdowns for when $real_port is
				not defined.
2017-03-24 	Richard Forth   Fixed vhost breakdowns for when apache is not
				listening on port 80, but a custom port.
2017-03-24 	Richard Forth   Fixed some issues with vhost count breakdowns.
2017-03-24 	Richard Forth   Removed 'privado' word, as locale setting makes this
				redundant.
2017-03-24 	Richard Forth   Added vhost count breakdown for HTTP/HTTPS,
				closes #142
2017-03-24 	Richard Forth   Removed 'OUCA' word, as locale setting makes this
				redundant.
2017-03-24 	Richard Forth   Worked out that I can actually set a locale